<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Charabia</string>
	<string name="options">Options</string>
	<string name="help">Aide</string>
	<string name="about">A propos</string>
	<string name="info">\nVersion %s</string>
	<string name="quit">Quitter</string>
	<string name="keys">Clés</string>
	<string name="master">Par QRcode, mode Maitre</string>
	<string name="slave">Par QRCode, mode Esclave</string>
	<plurals name="to">
        <item quantity="zero">Destinataire</item>
	    <item quantity="one">Destinataire</item>
        <item quantity="other">Destinataires</item>
    </plurals>
	<string name="from">De</string>
	<string name="title_message">Message %1$d car. %2$d sms</string>
	<string name="send">Envoyer</string>
	<string name="add_to">Ajouter destinataire</string>
	<string name="incoming_message_ticker_text">message</string>
	<string name="unexpected_error">erreur inattendue</string>
	<string name="fail_send">Echec lors de l\'envoi</string>
	<string name="unknow">inconnu</string>
	<string name="clear">Effacer</string>
	<string name="delete">Supprimer</string>
	<string name="error_create_key">Erreur lors de la création de la clé</string>
	<string name="edit">Editer</string>
	<string name="message_send_to">Message envoyé au %s"</string>
	<string name="no_phone_number">Pas de numéro de téléphone</string>
	<string name="empty_message">Message vide</string>
	<string name="no_contact">Pas de contacts d\'enregistré</string>
	<string name="contact_added">Contact ajouté</string>
	<string name="no_recipient">pas de destinataire spécifié</string>
	<string name="preference_phone_number">Numéro de Téléphone</string>
	<string name="error_sending_message">Erreur pendant l\'envoi du message</string>
	<string name="cancel">ANNULER</string>
	<string name="try_again">REESSAYER</string>
	<string name="fail_reading_tag">Echec de lecture du tag</string>
	<string name="send_message">Envoi du message</string>
	<string name="remove_to">Enlever destinataire</string>
	<string name="error_sending_message_to">L\'envoi au destinataire\n%s\nà échoué, que voulez-vous faire?</string>
	<string name="send_success">Envoi du message réussi</string>
	<string name="clear_all">EFFACER TOUT</string>
	<string name="dateformat">E dd MMM à kk:mm</string>
	<string name="unknown_user">Ce contact est inconnu dans la base des contacts de l\'application Charabia</string>
	<string name="no_key_for_user">Ce contact n\'a pas de clé partagé dans l\'application Charabia</string>
	<string name="blocksize_error">Ce contact vous a envoyé un message crypté par Charabia dont la taille n\'était pas correcte, la clé partagé est soit corrompue ou quelqu\'un à modifié le message pendant l\'envoi</string>
	<string name="padding_error">Ce contact vous a envoyé un message crypté par Charabia dont le remplissage n\'était pas correcte, la clé partagé est soit corrompue ou quelqu\'un à modifié le message pendant l\'envoi</string>
	<string name="secured_by_appname">(sécurisé par %s).</string>
	<string name="del_or_change_number">Supprimer ou changer numéro par défaut</string>
	<string name="refresh">Actualiser</string>
	<string name="save">Sauvegarder</string>
	<string name="restore">Restaurer</string>
	<string name="ok">OK</string>
	<string name="save_failure">Echec lors de la sauvegarde</string>
	<string name="save_success">Sauvegarde terminée</string>
	<string name="restore_failure">Echec lors de la restauration</string>
	<string name="restore_success">Retauration terminée</string>
	<string name="password">Mot de passe</string>
	<string name="bad_password">Erreur de mot de passe</string>
	<string name="error_read_file">Erreur lecture fichier</string>
	<string name="error_decrypt_file">Erreur decryptage fichier\nmauvais mot de passe?</string>
	<string name="by_sms">Par SMS</string>
	<string name="yes">OUI</string>
	<string name="no">NON</string>
	<string name="query_chare_key">Voulez vous partagez une clé secréte avec ce contact? (coût 1 sms)</string>
	<string name="directory">Annuaire</string>
	<string name="share">Partager</string>
	<string name="contacts">Contacts</string>
	<string name="send_invit_on_phone">Envoyer invitation au numéro?</string>
	<string name="pubkey_received">Ce contact vous a envoyé une demande de partage de clé secréte sous Charabia. Lancer l\'application Charabia pour répondre à sa demande.</string>
	<string name="invite">Invité</string>
	<string name="invitation_received">Invitation reçue</string>
	<string name="invitation_send">Invitation envoyée</string>
	<string name="message_received">Message reçue</string>
	<string name="message">Message</string>
	<string name="message_send">Message envoyée</string>
	<string name="invitation_answer">Reponse reçue</string>
	<string name="no_action">Pas d\'action en cours. Clique long pour composer un message.</string>
	<string name="sending">Envoi en cours.</string>
	<string name="invitation">Invitation</string>
	<string name="save_quit">Sauver et quitter</string>
	<string name="accept">Accepter</string>
	<string name="refuse">Refuser</string>
	<string name="send_again">Renvoyer</string>
</resources>
