<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/main_menu_options" android:icon="@android:drawable/ic_menu_preferences" android:title="@string/options" />
	<item android:id="@+id/main_menu_edit" android:icon="@android:drawable/ic_menu_edit" android:title="@string/edit" />
	<item android:id="@+id/main_menu_keys" android:icon="@android:drawable/ic_menu_add" android:title="@string/keys" />
	<item android:id="@+id/main_menu_help" android:icon="@android:drawable/ic_menu_help" android:title="@string/help" />
	<item android:id="@+id/main_menu_about" android:icon="@android:drawable/ic_menu_info_details" android:title="@string/about" />
	<item android:id="@+id/main_menu_quit" android:icon="@android:drawable/ic_menu_close_clear_cancel" android:title="@string/quit" />
</menu>
